Scrollbar theme fix

--- a/XpoMusic/Stylesheets/Common/general.scss
+++ b/XpoMusic/Stylesheets/Common/general.scss
@@ -14,7 +14,7 @@ html {
 
 @media (max-height: 1100px) {
     .main-view-container__content, .main-view-container__content > section, .main-view-container__content > div,
-    .main-view-container__scroll-node, .main-view-container__scroll-node-child {
+    .main-view-container, .main-view-container__scroll-node-child {
         /*
             Fix for new scrollbar theme: We invert the color of the element with scrollbar, as well as its immediate child, so
             the content is not inverted but the scrollbar is.
